# spooky-days-twitter

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  image_gen.py  national-days.json  pyproject.toml  twitter_post.py
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml  lint.yml  security-scan.yml  test.yml
Frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
Frontend/app/: root.tsx
Frontend/app/gallery/: gallery.tsx
Frontend/app/header/: header.test.tsx  header.tsx
Frontend/app/routes/: home.tsx
Frontend/app/welcome/: welcome.test.tsx  welcome.tsx
Frontend/src/: main.tsx
Lambdas/gallery_api/: .eslintrc.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
Lambdas/gallery_api/src/: handler.ts  types.ts  utils.ts
Lambdas/gallery_api/tests/: utils.test.ts
Lambdas/image_gen/: main.py  requirements.txt
Lambdas/twitter_post/: main.py  requirements.txt
Terraform/: api-gateway.tf  backend.tf  cloudfront.tf  cloudwatch.tf  dashboard-widgets.json  data.tf  dynamodb.tf  kms.tf  lambda.tf  main.tf  route53.tf  s3.tf  secretsmanager.tf  variables.tf
tests/: conftest.py  requirements-test.txt  test_image_gen.py  test_twitter_post.py
